After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 791034 - rtpjitterbuffer fails to create ptp_clock
rtpjitterbuffer fails to create ptp_clock
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.12.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-11-30 17:42 UTC by Michael Tretter
Modified: 2017-12-01 08:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-ptpclock-do-not-require-a-name-to-create-a-clock.patch (905 bytes, patch)
2017-11-30 17:42 UTC, Michael Tretter
none Details | Review
0001-ptpclock-do-not-require-a-name-to-create-a-clock.patch (927 bytes, patch)
2017-11-30 17:47 UTC, Michael Tretter
committed Details | Review

Description Michael Tretter 2017-11-30 17:42:51 UTC
Created attachment 364691 [details] [review]
0001-ptpclock-do-not-require-a-name-to-create-a-clock.patch

The rtpjitterbuffer element tries to allocate a GstPtpClock without providing a name. However, gst_ptp_clock_new() asserts that name is not NULL and fails. This results in a fallback to not using the reference clock even though a valid PTP reference is published in the sdp and detected by the rtpjitterbuffer.

I am not sure, if it is OK to remove the assertion, but looking at other elements it seems valid to not set the name in g_object_new().

If the assertion is correct, the rtpjitterbuffer must provide a name when instantiating the GstPtpClock. The patch is simple, but I don't know a proper name for this clock.
Comment 1 Michael Tretter 2017-11-30 17:47:37 UTC
Created attachment 364692 [details] [review]
0001-ptpclock-do-not-require-a-name-to-create-a-clock.patch
Comment 2 Sebastian Dröge (slomo) 2017-11-30 18:23:18 UTC
Comment on attachment 364692 [details] [review]
0001-ptpclock-do-not-require-a-name-to-create-a-clock.patch

Yes, just like the other netclocks. I'll merge later, thanks for the patch :)
Comment 3 Sebastian Dröge (slomo) 2017-12-01 08:02:30 UTC
commit bbafb78b1eb91c565347554a1d3e7f75b24664d7 (HEAD -> master)
Author: Michael Tretter <m.tretter@pengutronix.de>
Date:   Thu Nov 30 17:49:10 2017 +0100

    ptpclock: do not require a name to create a clock
    
    The gst_ptp_clock_new() does not actually require a name. However, for
    example the rtpjitterbuffer may create a clock without a name, fail, and
    fall back to not using the PTP clock.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=791034